# ChangeLog for sci-chemistry/unio
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2015; Justin Lecher <jlec@gentoo.org> unio-2.0.3-r1.ebuild:
  sci-chemistry/unio: Drop emul package support

  13 Nov 2014; Justin Lecher <jlec@gentoo.org> unio-2.0.3-r1.ebuild:
  Drop all KEYWORDS due to broken revdeps

  16 Sep 2014; Justin Lecher <jlec@gentoo.org> -unio-2.0.2-r1.ebuild,
  -unio-2.0.3.ebuild, unio-2.0.3-r1.ebuild:
  Add back dropped ~amd64; drop old

  16 Sep 2014; Christoph Junghans <ottxor@gentoo.org> unio-2.0.2-r1.ebuild,
  unio-2.0.3-r1.ebuild, unio-2.0.3.ebuild:
  dropped ~amd64 as no-multilib doesn't have abi_x86_32

  04 Jul 2014; Justin Lecher <jlec@gentoo.org> unio-2.0.3-r1.ebuild:
  Fix emul-linux deps for modern multilib

*unio-2.0.3-r1 (21 Mar 2014)

  21 Mar 2014; Justin Lecher <jlec@gentoo.org> +unio-2.0.3-r1.ebuild:
  Add symlinks for all apps

*unio-2.0.3 (16 Jan 2014)

  16 Jan 2014; Justin Lecher <jlec@gentoo.org> +unio-2.0.3.ebuild:
  Version Bump

  08 Nov 2013; Justin Lecher <jlec@gentoo.org> unio-2.0.2-r1.ebuild:
  Allow emul packages

  13 Aug 2013; Justin Lecher <jlec@gentoo.org> -unio-2.0.1-r1.ebuild,
  -unio-2.0.2.ebuild, +unio-2.0.2-r1.ebuild, metadata.xml:
  Fix upstreams silent version bump

  22 Dec 2011; Justin Lecher <jlec@gentoo.org> +unio-2.0.2.ebuild,
  metadata.xml:
  Version Bump

*unio-2.0.2 (22 Dec 2011)

  22 Dec 2011; Justin Lecher <jlec@gentoo.org> +unio-2.0.2.ebuild:
  Version Bump

  19 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  QA on quoting

  19 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  fperms sucks, because it could not handle wildcards

  09 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  Missing files are executable now

  05 Nov 2010; Justin Lecher <jlec@gentoo.org> unio-2.0.1-r1.ebuild:
  Prefix fix

*unio-2.0.1-r1 (05 Nov 2010)

  05 Nov 2010; Justin Lecher <jlec@gentoo.org> -unio-2.0.1.ebuild,