@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Jul 2015; Justin Lecher <jlec@gentoo.org> unio-2.0.3-r1.ebuild:
+  sci-chemistry/unio: Fix for non-multilib on prefix
+
   13 Apr 2015; Justin Lecher <jlec@gentoo.org> unio-2.0.3-r1.ebuild:
   sci-chemistry/unio: Drop emul package support
 
